--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="section2-paragraph content-flex-center-tablet">
             <h2 class="mb-20"><span class="text-black text-transform"><strong>expert</strong></span><span class="text-orange text-transform"><strong>
                         trainers</strong></span></h2>
-            <p class="text-gray mb-60">Lorem lorem ipsum lorem ipsum dolor lorem ipsum lorem</p>
+            <p class="text-gray mb-60 text-align-center-mobile">Lorem lorem ipsum lorem ipsum dolor lorem ipsum lorem</p>
         </div>
 
         <div class="section4-imagewrapper  js-blog-carousel blog-carousel owl-carousel ">
